style.css
body {
  background-color: #d9e6ed;
  margin: 0px;
  font-family: Helvetica;
}
table {
  width: 100%;
  border-style: none;
  border-width: 0px;
}
.shadow {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}
.nav {
  list-style: none;
  background-color: #fff;
  margin: 0px;
  padding: 0px;
  height: 40px;
  position: relative;
  display: flex;
}
.nav-bar {
  margin: 0;
  width: 100%;
}
.auto-save-bar {
  width: fit-content;
  align-items: end;
  display: flex;
  margin-left: auto;
  position: absolute;
  right: 0;
}
.auto-save-label {
  margin-left: auto;
  margin-right: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
}
.save {
  margin-right: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
}
.nav-item {
  list-style: none;
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
  font-weight: bold;
  font-size: large;
}
.container {
  width: 70%;
  margin-left: 15%;
  margin-bottom: 20px;
}

/* Template Listing Screen */
#template-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.template-item {
  border: 1px solid #fff;
  border-radius: 5px;
  height: 200px;
  width: 150px;
  margin-top: 30px;
}

.template-item:hover {
  transform: translate3d(1px, 1px, -1px);
  border: 1px solid #464545;
  border-radius: 5px;
  height: 200px;
  width: 150px;
  margin-top: 30px;
}

.template-view {
  border: 1px solid #fff;
  border-radius: 5px;
  height: 120px;
  width: 110px;
  margin: 20px;
  display: flex;
  align-items: center;
}

.template-item-name {
  margin: auto;
}

.template-action {
  margin: 10px;
  display: flex;
  justify-content: space-between;
}

button {
  background-color: #fff;
  border-width: 1px;
  border-radius: 4px;
}
button:hover {
  background-color: #d9e6ed;
}

/*Edit Resume*/
.full-width {
  width: 100%;
}
.half-width {
  width: 50%;
}
.height-30 {
  height: 30px;
}
.height-100 {
  height: 100px;
}
.title {
  text-align: left;
  font-weight: bold;
  font-size: larger;
  padding-top: 20px;
  padding-bottom: 20px;
  margin: 0;
}
.subtitle {
  text-align: left;
  font-weight: normal;
  font-size: small;
  color: gray;
  padding-left: 20px;
}
.overflow {
  overflow: hidden;
}
.inline-content {
  display: inline;
}
.collapsible {
  background-color: lightblue;
}
.flex-center {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.accessory-icon {
  width: 32px;
  height: 32px;
}
.collapsed-arrow {
  transform: initial;
  transition: transform 0.2s ease-out;
}
.expanded-arrow {
  transform: rotate(90deg);
  transition: transform 0.2s ease-out;
}
.expanded,
.collapsible:hover {
  background-color: lightslategray;
}
.collapsible-content {
  margin: 20px;
  max-height: 0px;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
}
.collapsible-child {
  background-color: #fff;
}
.collapsible-child:hover {
  background-color: #fff;
}
.clear-bg {
  background-color: #ffffff00;
}
.clear-bg:hover {
  background-color: #ffffff00;
}

/*Margin and Padding*/
.mt-10 {
  margin-top: 10px;
}
.mt-20 {
  margin-top: 20px;
}
.mr-10 {
  margin-right: 10px;
}
.mr-30 {
  margin-right: 30px;
}
.mt-40 {
  margin-top: 40px;
}
.pt-20 {
  padding-top: 20px;
}
.pl-10 {
  padding-left: 10px;
}
.pr-10 {
  padding-right: 10px;
}
.pl-20 {
  padding-left: 20px;
}
.pr-20 {
  padding-right: 20px;
}
.pb-20 {
  padding-bottom: 20px;
}
.pb-10 {
  padding-bottom: 10px;
}

/* CK Editor */
.ck-editor__editable_inline {
  min-height: 250px;
}

/* Drag and swap */
.dragover {
  background-color: yellow;
}

/* Skill Rating */
.rating {
  font-size: 70px;
  cursor: pointer;
}

.one {
  color: rgb(255, 0, 0);
}

.two {
  color: rgb(255, 106, 0);
}

.three {
  color: rgb(251, 255, 120);
}

.four {
  color: rgb(255, 255, 0);
}

.five {
  color: rgb(24, 159, 14);
}

